exports[`test renders correctly on compatible device 1`] = `
<div
  className="iUgsD">
  <h1
    className="fCuiQK">
    CSS Grid Playground
  </h1>
  <div
    className="tcdOr">
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Container
        </h3>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="display: grid;
      grid-gap: 1rem;
      grid-template-columns: 1fr 5fr 2.5fr;
      grid-template-rows: 1fr 5fr 1fr;
      grid-template-areas:
      \"header header header\"
      \"sidebar main aside\"
      \"sidebar footer footer\";" />
    </div>
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Items
        </h3>
        <div>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👆
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👇
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👋
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👀
          </button>
        </div>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="background: lightsalmon;
      border: 2px solid black;
      " />
    </div>
  </div>
  <div
    className="chDftT">
    <div
      className="bixtXF">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: header;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          1
        </div>
      </div>
    </div>
    <div
      className="bWWVGb">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: sidebar;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          2
        </div>
      </div>
    </div>
    <div
      className="ipHFtB">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: main;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          3
        </div>
      </div>
    </div>
    <div
      className="eoirsh">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: aside;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          4
        </div>
      </div>
    </div>
    <div
      className="gKZiAA">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: footer;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          5
        </div>
      </div>
    </div>
  </div>
  <div
    className="gspEWO">
    <a
      href="https://github.com/purplecones/css-grid-playground">
      <img
        alt="Github Logo"
        src="/github.png" />
    </a>
  </div>
</div>
`;

exports[`test renders correctly on incompatible device 1`] = `
<div
  className="iUgsD">
  <h1
    className="fCuiQK">
    CSS Grid Playground
  </h1>
  <div
    className="tcdOr">
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Container
        </h3>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="display: grid;
      grid-gap: 1rem;
      grid-template-columns: 1fr 5fr 2.5fr;
      grid-template-rows: 1fr 5fr 1fr;
      grid-template-areas:
      \"header header header\"
      \"sidebar main aside\"
      \"sidebar footer footer\";" />
    </div>
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Items
        </h3>
        <div>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👆
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👇
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👋
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👀
          </button>
        </div>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="background: lightsalmon;
      border: 2px solid black;
      " />
    </div>
  </div>
  <div
    className="chDftT">
    <div
      className="bixtXF">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: header;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          1
        </div>
      </div>
    </div>
    <div
      className="bWWVGb">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: sidebar;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          2
        </div>
      </div>
    </div>
    <div
      className="ipHFtB">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: main;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          3
        </div>
      </div>
    </div>
    <div
      className="eoirsh">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: aside;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          4
        </div>
      </div>
    </div>
    <div
      className="gKZiAA">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: footer;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          5
        </div>
      </div>
    </div>
  </div>
  <div
    className="gspEWO">
    <a
      href="https://github.com/purplecones/css-grid-playground">
      <img
        alt="Github Logo"
        src="/github.png" />
    </a>
  </div>
  <div
    style={
      Object {
        "margin": "10px",
      }
    }>
    <p>
      You are running on: 
      Other 0.0 / Other 0.0
    </p>
    <p>
      CSS Grid Layout is still fairly new so your browser might not support it yet. For now, come back on the latest versions of Chrome, Firefox, Safari, and Opera. ☕️
    </p>
    <p>
      More support info at: 
      <a
        href="http://caniuse.com/#feat=css-grid">
        http://caniuse.com/#feat=css-grid
      </a>
    </p>
  </div>
</div>
`;

exports[`test renders correctly on test runner as incompatible 1`] = `
<div
  className="iUgsD">
  <h1
    className="fCuiQK">
    CSS Grid Playground
  </h1>
  <div
    className="tcdOr">
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Container
        </h3>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="display: grid;
      grid-gap: 1rem;
      grid-template-columns: 1fr 5fr 2.5fr;
      grid-template-rows: 1fr 5fr 1fr;
      grid-template-areas:
      \"header header header\"
      \"sidebar main aside\"
      \"sidebar footer footer\";" />
    </div>
    <div
      className="eEcbLe">
      <div
        className="gGRckH">
        <h3
          className="gcdvDG">
          Grid Items
        </h3>
        <div>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👆
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👇
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👋
          </button>
          <button
            className="czOWQi"
            onClick={[Function]}>
            👀
          </button>
        </div>
      </div>
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="background: lightsalmon;
      border: 2px solid black;
      " />
    </div>
  </div>
  <div
    className="chDftT">
    <div
      className="bixtXF">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: header;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          1
        </div>
      </div>
    </div>
    <div
      className="bWWVGb">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: sidebar;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          2
        </div>
      </div>
    </div>
    <div
      className="ipHFtB">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: main;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          3
        </div>
      </div>
    </div>
    <div
      className="eoirsh">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: aside;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          4
        </div>
      </div>
    </div>
    <div
      className="gKZiAA">
      <textarea
        className="kEAiXh"
        onChange={[Function]}
        value="grid-area: footer;" />
      <div
        className="iuomSm">
        <div
          className="dxpgzB">
          5
        </div>
      </div>
    </div>
  </div>
  <div
    className="gspEWO">
    <a
      href="https://github.com/purplecones/css-grid-playground">
      <img
        alt="Github Logo"
        src="/github.png" />
    </a>
  </div>
  <div
    style={
      Object {
        "margin": "10px",
      }
    }>
    <p>
      You are running on: 
      Other 0.0 / Other 0.0
    </p>
    <p>
      CSS Grid Layout is still fairly new so your browser might not support it yet. For now, come back on the latest versions of Chrome, Firefox, Safari, and Opera. ☕️
    </p>
    <p>
      More support info at: 
      <a
        href="http://caniuse.com/#feat=css-grid">
        http://caniuse.com/#feat=css-grid
      </a>
    </p>
  </div>
</div>
`;
